--- a/PHP.html
+++ b/PHP.html
@@ -4,7 +4,7 @@
 <h1>PHP language main page</h1>
 <ul>
 <h1 style="color:rgb(221, 143, 9);">Links:</h1>
-<li style="color:lime;"><a href="Index.HTML">Index</a></li>
+<li style="color:lime;"><a href="index.HTML">Index</a></li>
 <li style="color:lime;"><a href="C language.HTML">C language</a></li>
 <li style="color:lime;"><a href="C++.HTML">C++</a></li>
 <li style="color:lime;"><a href="PHP.HTML">PHP</a></li>
