--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </table>
 <ul>
 <h1 style="color:rgb(221, 143, 9);">Links:</h1>
-<li style="color:lime;"><a href="Index.HTML">Index</a></li>
-<li style="color:lime;"><a href="C language.HTML">C language</a></li>
+<li style="color:lime;"><a href="index.html">Index</a></li>
+<li style="color:lime;"><a href="C language.html">C language</a></li>
 <li style="color:lime;"><a href="C++.HTML">C++</a></li>
 <li style="color:lime;"><a href="PHP.html">PHP</a></li>
 <li style="color:lime;"><a href="Java Script.html">Java Script</a></li>
