--- a/Java Script.html
+++ b/Java Script.html
@@ -7,7 +7,7 @@
 <li style="color:lime;"><a href="index.html">Index</a></li>
 <li style="color:lime;"><a href="C language.html">C language</a></li>
 <li style="color:lime;"><a href="C++.html">C++</a></li>
-<li style="color:lime;"><a href="PHP.html">PHP</a></li>
+<li style="color:lime;"><a href="PHP.HTML">PHP</a></li>
 <li style="color:lime;"><a href="Java Script.html">Java Script</a></li>
 </ul>
 <u><h1 style="color:rgb(255, 8, 0);">What is Java script language?</h1></u>
